fix home page taking only a fraction of the space on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,3 +24,14 @@
 .container {
   padding-top: 30px;
 }
+
+.articleCont{
+  display: flex;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 640px) {
+  .articleCont{
+    flex-direction: column;
+  }
+}
