--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	width: 300px;
+	width: 350px;
 	height: 400px;
 	margin: 20px;
 	background-color: #fff;
@@ -13,7 +13,7 @@
 }
 
 .card:hover{
-	width: 310px;
+	width: 360px;
 	height: 410px;
 	margin: 10px;
 }
